@@ -32,6 +32,8 @@ Improvements:
    unstaged files.
  - Obsolete commit-encoding option and pass --encoding=UTF-8 to revision
    commands.
+ - Main view: show uncommitted changes as staged/unstaged commits.
+   Can be disabled by putting `set show-changes = no` in ~/.tigrc.
 
 Bug fixes:
 
